# VisualSlam

./: .gitignore  Readme.md
VO/: main.py  visual_odom.ipynb
module_development/: CMakeLists.txt  main.cpp
old/: CMakeLists.txt
old/include/: Map.hpp  Ransac.hpp  SLAM.hpp
old/src/: tools.cpp  visualize_data.cpp
results/: results_stereo_gftt_0_150_no_loop.csv  results_stereo_gftt_0_300_no_loop.csv  results_stereo_gftt_6_150_no_loop.csv  results_stereo_gftt_6_300_no_loop.csv  results_stereo_gftt_7_150_no_loop.csv  results_stereo_gftt_7_300_no_loop.csv  results_stereo_orb_0_150_no_loop.csv  results_stereo_orb_0_300_no_loop.csv  results_stereo_orb_6_150_no_loop.csv  results_stereo_orb_6_300_no_loop.csv  results_stereo_orb_7_150_no_loop.csv  results_stereo_orb_7_300_no_loop.csv
scripts/: ComputeStereo.py  Map.py  displayMap.py  result_analysis.ipynb  results_analysis_euroc.ipynb  tools.py
visual_odometry/: ComputeStereo.py  DatasetRead.py  kitty_analysis.ipynb  main.py  visual_odom.ipynb  visual_odometry_analysis.ipynb
visual_slam_cpp/: CMakeLists.txt  keyframe_test  main.cpp  mappoint_test  notes.txt  readDataset.cpp  run_SLAM  run_test.sh  run_test_closing_1.sh  run_test_closing_2.sh  run_test_no_closing.sh  run_test_no_closing_1.sh  run_test_no_closing_2.sh  run_test_no_closing_3.sh  run_test_no_closing_4.sh  slam_test
visual_slam_cpp/.VSCodeCounter/2023-09-26_19-14-53/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.md  results.txt
visual_slam_cpp/DBow3/: README.md
visual_slam_cpp/DBow3/src/: BowVector.h  FeatureVector.cpp
visual_slam_cpp/docs/: Doxyfile
visual_slam_cpp/include/: FeatureExtraction.hpp  FrameExtraction.hpp  Map.hpp  SLAM.hpp  Stereo.hpp  VO_temp.hpp  backend_optimization.hpp  camera.hpp  common_includes.hpp  featureVO.hpp  frame.hpp  graph_optimization.hpp  graph_structure.hpp  local_mapping.hpp  monoSLAM.hpp  optimizer.hpp  readDataset.hpp  read_dataset.hpp  stereoSLAM.hpp  system.hpp  tempStereo.hpp  tools.hpp  tracking.hpp  visualize_data.hpp  visualizer.hpp
visual_slam_cpp/include/mrVSLAM/: camera.hpp  common_includes.hpp  data_parser.hpp  frame.hpp  graph_structures.hpp  local_mapping.hpp  loop_closing.hpp  map.hpp  mappoint.hpp  mono_tracking.hpp  read_dataset.hpp  slam.hpp  stereo_tracking.hpp  tools.hpp  visualizer.hpp
visual_slam_cpp/include/myslam/: camera.h  camera.hpp  common_include.h  common_include.hpp  dataset.h  frame.h  frame.hpp  g2o_types.h  g2o_types.hpp  local_mapping.h  local_mapping.hpp  loop_closing.hpp  map.h  map.hpp  mappoint.h  mappoint.hpp  mono_tracking.hpp  read_dataset.hpp  slam.h  slam.hpp  stereo_slam_matching.hpp  stereo_tracking.hpp  stereo_tracking_matching.hpp  tools.hpp  viewer.h  visualizer.hpp
visual_slam_cpp/old/include/: Stereo.hpp  camera.hpp  readDataset.hpp  tools.hpp  visualize_data.hpp
visual_slam_cpp/old/src/: SLAM.cpp  camera.cpp  readDataset.cpp
visual_slam_cpp/src/: CMakeLists.txt  FeatureExtraction.cpp  FrameExtraction.cpp  SLAM.cpp  VO_temp.cpp  backend_optimization.cpp  camera.cpp  dataset.cpp  frame.cpp  local_mapping.cpp  loop_closing.cpp  main.cpp  map.cpp  mappoint.cpp  monoSLAM.cpp  mono_tracking.cpp  readDataset.cpp  read_dataset.cpp  slam.cpp  stereoSLAM.cpp  stereo_tracking.cpp  stereo_tracking_matching.cpp  tempStereo.cpp  tools.cpp  tracking.cpp  viewer.cpp  visualize_data.cpp  visualizer.cpp
visual_slam_cpp/temp_slam/: CMakeLists.txt
visual_slam_cpp/temp_slam/include/: SLAM.hpp  StereoDirectSLAM.hpp  backend_optimization.hpp  camera.hpp  frame.hpp  map.hpp  read_dataset.hpp  tools.hpp  tracking.hpp  visualiazer.cpp  visualizer.hpp
visual_slam_cpp/temp_slam/src/: SLAM.cpp  StereoDirectSLAM.cpp  backend_optimization.cpp  camera.cpp  frame.cpp  main.cpp  map.cpp  tools.cpp  tracking.cpp  visualizer.cpp
visual_slam_cpp/test/: CMakeLists.txt  keyframe_test.cpp  mappoint_test.cpp  slam_tests.cpp
visual_slam_py/: ComputeStereo.py  DatasetRead.py  Extractor.py  FeatureExtractor.py  Map.py  displayMap.py  kitty_analysis.ipynb  main.py  tools.py
visual_slam_v1/: Extractor.py  basic_feature_extraction.py  main.py
visual_slam_v1/backlog/: feature_matching.py
